// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateWorkout > matches a deterministic snapshot for representative inputs (Gen-T6) 1`] = `
{
  "exercises": [
    {
      "exerciseId": "legpress",
      "loadSuggestionKg": null,
      "name": "Leg Press",
      "primaryMuscle": "QUADS",
      "repHigh": 12,
      "repLow": 8,
      "restSec": 120,
      "rpeTarget": 8,
      "sets": 3,
    },
    {
      "exerciseId": "squat",
      "loadSuggestionKg": null,
      "name": "Back Squat",
      "primaryMuscle": "QUADS",
      "repHigh": 12,
      "repLow": 8,
      "restSec": 120,
      "rpeTarget": 8,
      "sets": 3,
    },
    {
      "exerciseId": "row",
      "loadSuggestionKg": null,
      "name": "Barbell Row",
      "primaryMuscle": "LATS",
      "repHigh": 12,
      "repLow": 8,
      "restSec": 120,
      "rpeTarget": 8,
      "sets": 3,
    },
    {
      "exerciseId": "bench",
      "loadSuggestionKg": null,
      "name": "Bench Press",
      "primaryMuscle": "CHEST",
      "repHigh": 12,
      "repLow": 8,
      "restSec": 120,
      "rpeTarget": 8,
      "sets": 3,
    },
    {
      "exerciseId": "legcurl",
      "loadSuggestionKg": null,
      "name": "Leg Curl",
      "primaryMuscle": "HAMSTRINGS",
      "repHigh": 12,
      "repLow": 8,
      "restSec": 120,
      "rpeTarget": 8,
      "sets": 3,
    },
    {
      "exerciseId": "curl",
      "loadSuggestionKg": null,
      "name": "Dumbbell Curl",
      "primaryMuscle": "BICEPS",
      "repHigh": 12,
      "repLow": 8,
      "restSec": 120,
      "rpeTarget": 8,
      "sets": 3,
    },
    {
      "exerciseId": "lateral",
      "loadSuggestionKg": null,
      "name": "Lateral Raise",
      "primaryMuscle": "SIDE_DELTS",
      "repHigh": 12,
      "repLow": 8,
      "restSec": 120,
      "rpeTarget": 8,
      "sets": 3,
    },
  ],
  "rationale": [
    "Barbell Row — Lats (priority 0.81)",
    "Back Squat — Quads (priority 0.81)",
    "Bench Press — Chest (priority 0.81)",
    "Dumbbell Curl — Biceps (priority 0.81)",
    "Lateral Raise — Side delts (priority 0.81)",
    "Leg Press — Quads (priority 0.81)",
    "Leg Curl — Hamstrings (priority 0.81)",
  ],
}
`;

exports[`generateWorkout > matches a deterministic snapshot for representative inputs (Gen-T6) 2`] = `
{
  "exercises": [
    {
      "exerciseId": "squat",
      "loadSuggestionKg": null,
      "name": "Back Squat",
      "primaryMuscle": "QUADS",
      "repHigh": 6,
      "repLow": 3,
      "restSec": 210,
      "rpeTarget": 8.5,
      "sets": 4,
    },
    {
      "exerciseId": "row",
      "loadSuggestionKg": null,
      "name": "Barbell Row",
      "primaryMuscle": "LATS",
      "repHigh": 6,
      "repLow": 3,
      "restSec": 210,
      "rpeTarget": 8.5,
      "sets": 4,
    },
    {
      "exerciseId": "bench",
      "loadSuggestionKg": null,
      "name": "Bench Press",
      "primaryMuscle": "CHEST",
      "repHigh": 6,
      "repLow": 3,
      "restSec": 210,
      "rpeTarget": 8.5,
      "sets": 4,
    },
    {
      "exerciseId": "curl",
      "loadSuggestionKg": null,
      "name": "Dumbbell Curl",
      "primaryMuscle": "BICEPS",
      "repHigh": 6,
      "repLow": 3,
      "restSec": 210,
      "rpeTarget": 8.5,
      "sets": 4,
    },
    {
      "exerciseId": "lateral",
      "loadSuggestionKg": null,
      "name": "Lateral Raise",
      "primaryMuscle": "SIDE_DELTS",
      "repHigh": 6,
      "repLow": 3,
      "restSec": 210,
      "rpeTarget": 8.5,
      "sets": 4,
    },
  ],
  "rationale": [
    "Barbell Row — Lats (priority 0.81)",
    "Back Squat — Quads (priority 0.81)",
    "Bench Press — Chest (priority 0.81)",
    "Leg Press — Quads (priority 0.81)",
    "Dumbbell Curl — Biceps (priority 0.81)",
    "Forced Side delts coverage (priority 0.81)",
  ],
}
`;
